@@ -31,6 +31,13 @@ Bug Fixes
 * SOLR-7588: Fix javascript bug introduced by SOLR-7409 that breaks the
   dataimport screen in the admin UI. (Bill Bell via Shawn Heisey)
 
+Other Changes
+----------------------
+
+* SOLR-7623: Fix regression from SOLR-7484 that made it impossible to override 
+  SolrDispatchFilter#execute() and SolrDispatchFilter#sendError().  You can now override these
+  functions in HttpSolrCall.  (ryan)
+
 ==================  5.2.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
